# registro-notas-academicas

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: registro_notas.py
tests/: test_registro_notas.py
tests/features/: registro_notas.feature
tests/step_defs/: test_steps.py
