[project]
name = "registro-notas-academicas"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-bdd>=7.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
markers = [
    "smoke: pruebas críticas de humo",
    "critical: pruebas de funcionalidad crítica",
    "regression: pruebas de regresión",
]